# pong

./: CMakeLists.txt  game.cpp  game.h  glad.c  main.cpp  window.cpp  window.h
gfx/: common.h  shader.cpp  shader.h  texture.cpp  texture.h
libs/glad/include/glad/: glad.h
libs/sdl2/win/: SDL2main.lib
libs/spdlog-0.16.3/include/spdlog/details/: pattern_formatter_impl.h
libs/stb/include/: stb_image.h
media/: fs.txt  vs.txt
utils/: common.h  file.h  log.h  timer.h  win_timer.cpp
